--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-binaryornot==0.3.0
+arrow==0.5.4
 blessings==1.6
-click==3.3
 docopt==0.6.2
 falcon==0.2
-httplib2==0.9
-Jinja2==2.7.3
-MarkupSafe==0.23
-mock==1.0.1
 Pillow==2.7.0
 python-instagram==1.3.0
-python-mimeparse==0.1.4
-PyYAML==3.11
 requests==2.5.3
-simplejson==3.6.5
 six==1.9.0
