run tests with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py26, py27, py34
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/yagnigram
-commands = python setup.py test
 deps =
+    nose
+    nose-progressive
     -r{toxinidir}/requirements.txt
+commands = nosetests --with-progressive
